# glazy

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
examples/: config.kdl  layout.kdl
src/: config.rs  git.rs  gitlab.rs  lib.rs
src/commands/: bootstrap.rs  mod.rs  open.rs  update.rs
