[package]
name = "glazy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "glazy"

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.34", features = ["derive"] }
gitlab = "0.1710.0"
kdl = "6.3.4"
miette = { version = "7.5.0", features = ["fancy"] }
rstest = "0.25.0"
serde = { version = "1.0.219", features = ["derive"] }
skim = "0.16.1"
test-log = { version = "0.2.17", features = ["trace"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
xdg = "2.5.2"
