[package]
name = "glazy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "glazy"

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.46", features = ["derive"] }
gitlab = "0.1803.0"
kdl = "6.3.4"
miette = { version = "7.6.0", features = ["fancy"] }
rstest = "0.26.1"
serde = { version = "1.0.219", features = ["derive"] }
skim = "0.20.5"
test-log = { version = "0.2.18", features = ["trace"] }
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
xdg = "3.0.0"
